--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+section{
+  width: 100vw;
+  height: 100vh;
+}
