--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -2,6 +2,14 @@
     <div id="black-display">
         <div class="content">
             <header class="container">
+                <nav>
+                    <a href="#">/ Créons des émotions</a>
+                    <a href="#">/ À propos</a>
+                    <a href="#">/ Points forts</a>
+                    <a href="#">/ FAQ</a>
+                    <a href="#">/ Prendre un rendez-vous</a>
+
+                </nav>
                 <div id="videos">
                     <div id="video-container">
                         <video autoplay loop>
@@ -24,8 +32,11 @@
                 </div>
                 
                 
-                <h1>Lorem ipsum dolor sit amet.</h1>
-                <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum quas, asperiores est itaque.</h2>
+                <h1 class="title">Lorem ipsum dolor sit amet.</h1>
+                <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum quas, asperiores est itaque.</h2>
+                <div class="button-container">
+                    <a href="#" class="button">Découvrir Nos Services</a>
+                </div>
             </header>
         </div>
         
@@ -33,6 +44,14 @@
     <div id="white-display">
         <div class="content">
             <header class="container">
+                <nav>
+                    <a href="#">/ Créons des émotions</a>
+                    <a href="#">/ À propos</a>
+                    <a href="#">/ Points forts</a>
+                    <a href="#">/ FAQ</a>
+                    <a href="#">/ Prendre un rendez-vous</a>
+
+                </nav>
                 <div id="videos">
                     <div id="video-container">
                         <video autoplay loop>
@@ -52,11 +71,16 @@
                             Your browser does not support the video tag.
                         </video>
                     </div>
+                    
                 </div>
                 
                 
-                <h1>Lorem ipsum dolor sit amet.</h1>
-                <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum quas, asperiores est itaque.</h2>
+                <h1 class="title">Lorem ipsum dolor sit amet.</h1>
+                <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum quas, asperiores est itaque.</h2>
+                <div class="button-container">
+                    <a href="#" class="button">Découvrir Nos Services</a>
+                </div>
+                
             </header>
         </div>
     </div>
