--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -40,11 +40,11 @@ h2{
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: var(--background);
 }
 
 #black-display{
-    color: white;
+    color: var(--text);
     position: absolute;
     width: var(--x, 0);
     height: 100vh;
@@ -53,7 +53,7 @@ h2{
 }
 
 #white-display{
-    background-color: white;
+    background-color: var(--light-background);
 }
 
 nav{
@@ -64,14 +64,15 @@ nav{
 }
 
 nav a{
-    color: black;
+    color: var(--light-text);
     font-size: 1.3em;
     text-decoration: none;
 }
 
 #black-display nav a{
-    color: white;
+    color: var(--text);
 }
+
 .button-container{
     width: 100%;
     display: flex;
@@ -82,16 +83,16 @@ nav a{
 .button{
     display: block;
     text-align: center;
-    color: black;
+    color: var(--light-primary);
     height: 5vh;
     width: 40%;
     vertical-align: middle;
     line-height: 5vh;
     font-size: 1.3em;
-    border-color: black;
+    border-color: var(--light-primary);
 }
 
 #black-display .button{
-    color: white;
-    border-color: white;
+    color: var(--primary);
+    border-color: var(--primary);
 }
