Correction bug portfolio

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,3 +1,14 @@
-<section>
-    <h1>test</h1>
+<section id="ÀPropos">
+    <div class="container">
+        <div class="row">
+            <div class="six columns imageCol">
+                <img src="assets/images/aboutus.JPG" alt="Filming scene">
+            </div>
+            <div class="six columns">
+                <h1>À propos</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem doloremque recusandae enim, dignissimos sunt saepe. Assumenda dolor in voluptatem nam corrupti optio voluptatum quam alias error quisquam iure obcaecati incidunt exercitationem nobis, accusantium debitis non commodi quas corporis asperiores saepe at a numquam. Ipsum voluptatem natus eos voluptas explicabo! Perspiciatis itaque dignissimos consequuntur nobis ut minus! Dolore officia eius sequi id ullam at architecto, pariatur modi omnis unde doloremque repudiandae temporibus nesciunt exercitationem quia magnam totam libero incidunt illo ea esse veniam! Dolore vero, magnam fugit deserunt quae fugiat dicta iusto ex quia, quidem ipsum eius molestiae laudantium eligendi ducimus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, voluptatum magnam! Et ea aliquid, cupiditate harum eligendi eum sapiente corporis delectus illum rem porro sed sunt, corrupti eius ratione, quae adipisci voluptas nulla consequatur voluptatem deleniti officiis reprehenderit ipsam ad! Minima autem expedita pariatur, libero nesciunt quidem eum! Eligendi, natus.</p>
+            </div>
+        </div>
+    </div>
 </section>
