--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-hero></app-hero>
 <app-portfolio></app-portfolio>
+<app-about-us></app-about-us>
+<app-strengths></app-strengths>
+
+<app-book-appointment></app-book-appointment>
+<app-footer></app-footer>
