--- a/src/app/book-appointment/book-appointment.component.html
+++ b/src/app/book-appointment/book-appointment.component.html
@@ -1,1 +1,28 @@
-<p>book-appointment works!</p>
+<section id="PrendreunRendez-Vous">
+    <div class="container">
+        <h1>Nous Contacter</h1>
+        <div>
+            <label for="name">Votre nom<span class="color-primary">*</span></label>
+            <input type="text" placeholder="Ex: Andy Dufresne" id="name" name="name"> 
+        </div> 
+
+        <div class="row">
+            <div class="six columns">
+                <label for="email">Votre email<span class="color-primary">*</span></label>
+                <input type="email" placeholder="Ex: andydufresne@unaciem.fr" name="email" id="email">
+            </div>
+            <div class="six columns">
+                <label for="email">Votre numéro de téléphone</label>
+                <input type="email" placeholder="Ex: 636-555-3226" name="email" id="email">
+            </div>
+        </div>
+
+        <div>
+            <label for="message">Votre message<span class="color-primary">*</span></label>
+            <textarea name="message" id="message" placeholder="Ex: Bonjour, je souhaiterais prendre rendez-vous pour une consultation..."></textarea>
+        </div>
+
+        <button class="button-primary">Envoyer</button>
+
+    </div>
+</section>
