--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -1,8 +1,8 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
 }
 
-h1{
+h1 {
     margin-top: 6vh;
     font-size: 7em;
     text-align: center;
@@ -10,77 +10,77 @@ h1{
     text-transform: uppercase;
 }
 
-h2{
+h2 {
     font-size: 2em;
     margin-top: 3vh;
     text-align: center;
 }
 
-#video-container{
+#video-container {
     padding-top: 5vh;
     width: 8vw;
     height: 25vh;
     overflow: hidden;
     display: block;
-    
+
 }
 
-#video-container video{
+#video-container video {
     height: 100%;
 }
 
-#videos{
+#videos {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding-top: 5vh;
 }
 
-#black-display .content{
+#black-display .content {
     position: absolute;
     width: 100vw;
     height: 100vh;
     background-color: var(--background);
 }
 
-#black-display{
+#black-display {
     color: var(--text);
     position: absolute;
-    width: var(--x, 0);
     height: 100vh;
     overflow: hidden;
     z-index: 10;
 }
 
-#white-display{
+#white-display {
     background-color: var(--light-background);
+    height: 100vh;
 }
 
-nav{
+nav {
     padding-top: 2vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-nav a{
+nav a {
     color: var(--light-text);
     font-size: 1.3em;
     text-decoration: none;
 }
 
-#black-display nav a{
+#black-display nav a {
     color: var(--text);
 }
 
-.button-container{
+.button-container {
     width: 100%;
     display: flex;
     justify-content: center;
     padding-top: 3vh;
 }
 
-.button{
+.button {
     display: block;
     text-align: center;
     color: var(--light-primary);
@@ -92,7 +92,28 @@ nav a{
     border-color: var(--light-primary);
 }
 
-#black-display .button{
+#black-display .button {
     color: var(--primary);
     border-color: var(--primary);
+}
+
+@media all and (orientation: portrait){
+    h1 {
+        font-size: 3em;
+    }
+    h2 {
+        font-size: 1.5em;
+    }
+    #video-container {
+        width: 20vw;
+        height: 15vh;
+    }
+    .button {
+        width: 95vw;
+    }
+
+    nav a {
+        font-size: 1em;
+        text-align: center;
+    }
 }
