--- a/src/app/strengths/strengths.component.html
+++ b/src/app/strengths/strengths.component.html
@@ -1,1 +1,29 @@
-<p>strengths works!</p>
+<section id="NosForces">
+    <div class="container">
+        <h1>Nos forces</h1>
+        <div class="row">
+            <div class="four columns">
+                <div class="strength">
+                    <i class='bx bxs-camera-movie icon'></i>
+                    <h2>Force #1</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum ullam alias, debitis et est labore amet aspernatur aut doloremque quasi rerum, saepe odio inventore error veniam provident quod fugiat nulla dicta, eaque impedit vitae! Modi, voluptas quo quas consectetur culpa voluptates fugit obcaecati at ab veniam nesciunt repudiandae recusandae ullam illo maiores dolorum doloribus, laborum dolorem rem magnam animi! Tempora fuga consequatur eius adipisci natus, sit atque quis deleniti amet ullam fugiat aspernatur. Officia quam vel deserunt, sit consequatur dolorum nostrum cupiditate pariatur autem odio sed mollitia corporis animi molestiae corrupti ipsum unde, accusamus nisi voluptatibus! Asperiores ad voluptatibus nisi?</p>
+                </div>
+            </div>
+            <div class="four columns">
+                <div class="strength">
+                    <i class='bx bxs-music icon'></i>
+                    <h2>Force #2</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At praesentium doloribus odio minima quam alias deserunt. Est, omnis reprehenderit facilis in reiciendis deserunt. Ipsum aliquid ad qui quas! Magni facere minima asperiores dolor omnis, culpa ea. Repellat possimus perferendis placeat accusamus tempore obcaecati, labore cupiditate, voluptatibus deleniti veniam ipsa quaerat.</p>
+                </div>
+            </div>
+            <div class="four columns">
+                <div class="strength">
+                    <i class='bx bxs-devices icon' ></i>
+                    <h2>Force #3</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita modi quia aliquid quos non nemo laborum rerum, magni repudiandae, tempora facere omnis odit blanditiis, nobis amet itaque ea fugit. Corporis a alias exercitationem repellat! Eum ab provident rerum similique blanditiis laudantium aliquam omnis laborum optio quos a ducimus assumenda exercitationem dignissimos modi, nam recusandae ut aspernatur repellendus error necessitatibus magnam nobis nostrum perferendis! Quo adipisci, placeat ipsam ad tempora, ipsa explicabo corporis consectetur eos assumenda doloribus est rem? Cupiditate impedit necessitatibus consectetur consequuntur iusto adipisci, aperiam rem hic, rerum quis quibusdam, ducimus quos. Reiciendis sit facilis in omnis totam.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+</section>
