--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,14 +1,12 @@
-<section>
-    <div id="black-display">
+<section (mousemove)="onMouseMove($event)">
+    <div id="black-display" [ngStyle]="{'width': this.mouseX+'vw'}">
         <div class="content">
             <header class="container">
                 <nav>
-                    <a href="#">/ Créons des émotions</a>
-                    <a href="#">/ À propos</a>
-                    <a href="#">/ Points forts</a>
-                    <a href="#">/ FAQ</a>
-                    <a href="#">/ Prendre un rendez-vous</a>
-
+                    <a href="#Portfolio"># Portfolio</a>
+                    <a href="#ÀPropos"># À propos</a>
+                    <a href="#NosForces"># Nos Forces</a>
+                    <a href="#PrendreunRendez-Vous"># Prendre un rendez-vous</a>
                 </nav>
                 <div id="videos">
                     <div id="video-container">
@@ -30,27 +28,26 @@
                         </video>
                     </div>
                 </div>
-                
-                
+
+
                 <h1 class="title">Lorem ipsum dolor sit amet.</h1>
-                <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum quas, asperiores est itaque.</h2>
+                <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum
+                    quas, asperiores est itaque.</h2>
                 <div class="button-container">
                     <a href="#" class="button">Découvrir Nos Services</a>
                 </div>
             </header>
         </div>
-        
+
     </div>
     <div id="white-display">
         <div class="content">
             <header class="container">
                 <nav>
-                    <a href="#">/ Créons des émotions</a>
-                    <a href="#">/ À propos</a>
-                    <a href="#">/ Points forts</a>
-                    <a href="#">/ FAQ</a>
-                    <a href="#">/ Prendre un rendez-vous</a>
-
+                    <a href="#Portfolio"># Portfolio</a>
+                    <a href="#ÀPropos"># À propos</a>
+                    <a href="#NosForces"># Nos Forces</a>
+                    <a href="#PrendreunRendez-Vous"># Prendre un rendez-vous</a>
                 </nav>
                 <div id="videos">
                     <div id="video-container">
@@ -71,18 +68,19 @@
                             Your browser does not support the video tag.
                         </video>
                     </div>
-                    
+
                 </div>
-                
-                
+
+
                 <h1 class="title">Lorem ipsum dolor sit amet.</h1>
-                <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum quas, asperiores est itaque.</h2>
+                <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum
+                    quas, asperiores est itaque.</h2>
                 <div class="button-container">
                     <a href="#" class="button">Découvrir Nos Services</a>
                 </div>
-                
+
             </header>
         </div>
     </div>
-    
+
 </section>
