Ajout animation scroll

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -30,7 +30,7 @@
                 </div>
 
 
-                <h1 class="title">Lorem ipsum dolor sit amet.</h1>
+                <h1 class="title">UNACIEM</h1>
                 <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum
                     quas, asperiores est itaque.</h2>
                 <div class="button-container">
@@ -72,7 +72,7 @@
                 </div>
 
 
-                <h1 class="title">Lorem ipsum dolor sit amet.</h1>
+                <h1 class="title">UNACIEM</h1>
                 <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque obcaecati rerum
                     quas, asperiores est itaque.</h2>
                 <div class="button-container">
