--- a/src/app/book-appointment/book-appointment.component.html
+++ b/src/app/book-appointment/book-appointment.component.html
@@ -1,5 +1,5 @@
 <section id="PrendreunRendez-Vous">
-    <div class="container">
+    <div class="container" id="contact">
         <h1>Nous Contacter</h1>
         <div>
             <label for="name">Votre nom<span class="color-primary">*</span></label>
