--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div style="width: 100vw; height: 100vh; background-color: black; position: fixed; z-index: 2000; display: flex; justify-content: center; align-items: center; pointer-events: none;" id="preloader">
+    <img src="../assets/images/logo.png" alt="Logo de UNACIEM" style="width: 50vw;">
+</div>
 <app-hero></app-hero>
 <app-portfolio></app-portfolio>
 <app-about-us></app-about-us>
