--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,17 +3,16 @@
         <div class="row">
             <div class="four columns">
                 <h3>À propos</h3>
-                <p>Unaciem est une association qui a pour but de promouvoir la santé mentale et le bien-être des populations.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium asperiores illo sequi molestias cum!</p>
                 <p>&copy; UNACIEM Créé par <a href="https://www.loukag.com">Louka Gauthier</a></p>
             </div>
             <div class="four columns">
                 <h3>Liens Utiles</h3>
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">À propos</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#Portfolio">Portfolio</a></li>
+                    <li><a href="#Àpropos">À propos</a></li>
+                    <li><a href="#NosForces">NosForces</a></li>
+                    <li><a href="#Prendreunrendez-vous">Prendre un rendez-vous</a></li>
                 </ul>
             </div>
             <div class="four columns">
