--- a/src/app/book-appointment/book-appointment.component.html
+++ b/src/app/book-appointment/book-appointment.component.html
@@ -1,4 +1,4 @@
-<section id="PrendreunRendez-Vous">
+<section id="PrendreunRendez-Vous" class="center-section">
     <div class="container" id="contact">
         <h1>Nous Contacter</h1>
         <div>
