--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<section id="Portfolio">
+<section id="Portfolio" class="center-section secondary-background">
     <div class="container" id="portfolio-container">
         <div id="view-portfolio">
             <h1>Portfolio</h1>
