--- a/src/app/strengths/strengths.component.html
+++ b/src/app/strengths/strengths.component.html
@@ -1,4 +1,4 @@
-<section id="NosForces">
+<section id="NosForces" class="center-section secondary-background">
     <div class="container">
         <h1 id="title">Nos forces</h1>
         <div class="row">
