--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<section id="ÀPropos">
+<section id="ÀPropos" class="center-section">
     <div class="container">
         <div class="row">
             <div class="six columns imageCol">
